<resources>
    <string name="app_name">Pro-Gym</string>
    <string name="action_settings">Settings</string>
    <string name="description">Enlarged Image</string>
    <string name="placeholder">Placeholder</string>
    <string name="activity_workouts">Workouts</string>
    <string name="activity_utilities">Utilities</string>
    <string name="activity_advice">Advice</string>
    <string name="activity_calorie_counter">Calorie Counter</string>
    <string name="activity_run">Run</string>
    <string name="activity_utility_heartbeatcounter">Heartbeat Counter</string>
    <string name="activity_utility_pedometer">Pedometer</string>
    <string name="activity_utility_stopwatch">Stopwatch</string>
    <string name="activity_utility_timer">Timer</string>
    <string name="activity_workout_arms">Arms</string>
    <string name="activity_workout_core">Core</string>
    <string name="activity_workout_legs">Legs</string>
    <string name="activity_workout_upperbody">Upper Body</string>
    <string name="activity_workout_cardio">Cardio</string>
    <string name="action_home">Home</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_preferences">Preferences</string>
    <string name="action_update">Update</string>
    <string name="action_exit">Exit</string>
    <string name="step_counter">android.hardware.sensor.stepcounter</string>
	<string name="step_detector">android.hardware.sensor.stepdetector</string>
    <string-array name="meal_type">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snack</item>
    </string-array>
    <string name="update"></string>
    <string-array name="NotificationTones">		
		<item>Beep Once</item>
		<item>Bubbles</item>
		<item>Knock</item>
		<item>Postman</item>
		<item>Pure Bell</item>
		<item>Silent</item>
		<item>Whistle</item>
	</string-array>
    <string-array name="AlarmTypes">
        <item>Melody</item>
        <item>Vibration</item>
        <item>Vibration and Melody</item>
   		<item>Silent</item>
    </string-array>
    <string-array name="AlarmTones">
		<item>Basic Tone</item>
		<item>Beep Once</item>
		<item>Beep Beep</item>
		<item>Chime</item>
		<item>Postman</item>
		<item>Silent</item>
	</string-array>
    <string-array name="Themes">
		<item>Light</item>
		<item>Dark</item>
	</string-array>
    <string-array name="FontSizes">
		<item>Small</item>
		<item>Normal</item>
		<item>Large</item>
	</string-array>
    <string name="about">
        &#8226; Pro-Gym is a Fitness &amp; Workout Utility Android Application.
        \n\n&#8226; Developed by Victor Chow for his Honours Project as part of the University of Dundee\'s Applied Computing course (Bsc Hons).
        \n\n&#8226; The aim of this application is to provide informaiton and tools to new users, and does not require them to join a gym.
        \n\n&#8226; All the workouts provided insde the Pro-Gym application, do not require any gym equipment and can be completed at home.
        \n\n&#8226; Pro-Gym aims to provide a series of basic utilities e.g. Timers, Stopwatches etc. in addition to a category of workouts.
        \n\n&#8226; The Pro-Gym application can also be used with the Samsung Galaxy Gear Live Smartwatch.
        \n\n&#8226; All icons were obtained through the website: http://www.flaticon.com/
        \n\n&#8226; Any problems or bugs can be e-mailed to the developer at: victorchow507@gmail.com.
    </string>
	<string name="help_header">Welcome to Pro-Gym: Fitness &amp; Workout Utility Application.</string>
    <string name="help_Home_0">Home</string>
    <string name="help_Workouts_0">Workouts</string>
    <string name="help_Utilities_0">Utilities</string>
    <string name="help_CalorieTracker_0">Calorie Tracker</string>
	<string name="help_Run_0">Run</string>
	<string name="help_Advice_0">Advice</string>
	<string name="help_Preferences_0">Preferences</string>
	<string name="help_Update_0">Update</string>
	<string name="help_footer">Any problems or bugs can be e-mailed to the developer at: victorchow507@gmail.com.</string>
	<string name="help_Home_1">
	    &#8226; Select any of the categories: Workouts: Utilities, Calorie Tracker, Run, Advice to access their functionality.
	    \n&#8226; Select the Home icon on the Action Bar to return to the Home Screen at any time.
	    \n&#8226; Select the Menu icon on the Action Bar to view additional features.
	</string>
	<string name="help_Workouts_1">
	    &#8226; Provies a category of workouts that can be completed without access to a gym.
	    \n&#8226; Select any of the categories: Arms, Upper Body, Core, Legs or Cardio to view related workouts.
	    \n&#8226; Select any of the workouts displayed to view more detailed information about the related workout.
	</string>
	<string name="help_Utilities_1">
		&#8226; Provides a selection of utilities that can be used to aid your fitness/workout routines.
		\n&#8226; Select any of the categories: Timer, Stopwatch, Pedometer, Heartbeat Counter.    
	
		\n\n&#8226; <b>Timer:</b>
		\n\t&#8226; Touch anywhere on the Hours/Minutes/Seconds to set the timer.
		\n\t&#8226; Select the Reset button to reset the timer abck to 00:00:00.
		\n\t&#8226; Select the Start button to start the timer countdown.
		\n\t&#8226; Select the Stop button to stop the timer countdown.
		
		\n\n&#8226; <b>Stopwatch:</b>
		\n\t&#8226; Touch anywhere on the Hours/Minutes/Seconds to set the stopwatch.
		\n\t&#8226; Select the Reset button to reset the stopwatch back to 00:00:00.
		\n\t&#8226; Select the Start button to start the stopwatch counter.
		\n\t&#8226; Select the Stop butotn to stop the stopwatch counter.
		\n\t&#8226; Select the Lap button to lap the stopwatch counter.
		
		\n\n&#8226; <b>Pedometer:</b>
		\n\t&#8226; Select the Start button to start the Pedometer.
		\n\t&#8226; The number of steps will be displayed on-screen.
		\n\t&#8226; Select the Stop button to stop the Pedometer.
		\n\t&#8226; Select the Reset butotn to reset the Pedometer back to 0 steps.
		
		\n\n&#8226; <b>Heartbeat Counter</b>
		\n\t&#8226; Select the Start button to start the Heartbeat Counter.
		\n\t&#8226; Place your finger on the Heartbeat sensor located on your device. (Varies on each device. Not all devices have this sensor.)
		\n\t&#8226; The Heartbeat Counter will run for 6 seconds, then calculates your Heartbeats Per Minute (BPM).
		\n\t&#8226; Select the Reset button to reset the Heartbeat Counter.
		\n\t&#8226; There is a chart provided to measure your BPM against.
	</string>
	<string name="help_CalorieTracker_1">
		&#8226; <b>Provides a utility which can help you keep track of your calorie intake.</b>
		\n&#8226; The Menu Bar, located at the top of the screen, will display the current date and current amount of calories consumed.
		\n&#8226; The Menu Bar provides two navigational buttons: Previous and Next; which allows you to cycle through different days that have been saved on the device.
		\n&#8226; Select the <b>Add New Item</b> button, located at the bottom of the screen, to add a new meal.
		\n\t&#8226; Select a Meal Type from the selection: Breakfast, Lunch, Dinner or Snack.
		\n\t&#8226; Enter the name of the food in the first option.
		\n\t&#8226; Enter the number of calories from the food in the second option.
		\n\t&#8226; Select <b>Add Another</b> to add another food to this meal.
		\n\t&#8226; Select <b>Done</b> to finish adding items to this meal, and add the meal to the table.
		\n\t&#8226; The total number of calories will be displayed for that meal, and is also added to the running total for that specific day.
		\n&#8226; The Calorie Tracker will automatically create a new day past midnight. 
	</string>
	<string name="help_Run_1">
	    &#8226; Select the Start button to begin your run.
	    \n&#8226; The GPS function must be enabled on your device.
	    \n&#8226; The GPS function will track your location and calculate the distance travelled and average running speed.
	</string>
	<string name="help_Advice_1">
	    &#8226; Advice related to Workouts and general Fitness lifestyle will be displayed on-screen.
	    \n&#8226; Cycle through advice by using the navigation buttons provided.
	</string>
	<string name="help_Preferences_1">
	    &#8226; Configure the settings of the application based on your preferences.
	    \n\t&#8226; Enable Notifications.
	    \n\t&#8226; Select Themes.
	    \n\t&#8226; Select Alarm Sounds
	    \n\t&#8226; Clear personal data stored on device.
	    \n\t&#8226; Reset back to default preferences.
	    \n\t&#8226; Save preferences and apply them.
	</string>
	<string name="help_Update_1">
	    &#8226; Visit the Google Playstore to check for new updates.
	</string>
	<string name="advice_0">
	    Studies show that eating slow-digesting carbs (whole grains) before workouts, helps your burn more fat and increases endurance levels.
	</string>
	<string name="advice_1">
	    Consume whey-protein after a workout to help repair damaged/fatigued muscles, leading to an increase in muscle mass.
	</string>
	<string name="advice_2">
	    Use forced reps on your last sets to maximize your workout efficiency.
	</string>
	<string name="advice_3">
	    Heavy weights and lower reps increases strength and overall muscle size. Lower weights and higher reps increases endurance.
	</string>
	<string name="advice_4">
	    Always stretch afer training to prevent injuries to your muscles.
	</string>
	<string name="advice_5">
	    Keep yourself well hydrated throughout your workout/fitness routine. Drinks with electrolytes are most efficient at rehydrating your body after a workout, and replishes your salt levels.
	</string>
	<string name="advice_6">
	    It takes roughly 10 minutes on the treadmill to burn off 100 calories.
	</string>
	<string name="advice_7">
	    Changing your diet to include more carbs and protein will help you increase your muscle size and weight gain.
	</string>
	<string name="advice_8">
	    Triceps make up 2/3 of your upper arm. Train these to make your arm look bigger overall.
	</string>
	<string name="advice_9">
	    To lose fat around the abs, do workouts that target that specific area rather than doing general cardio exercises.
	</string>
	<string name="advice_10">
	    After an effective workout, your muscles should be in pain the following day.
	</string>
	<string name="advice_11">
	    Muscle gain is the process of tearing your muscle fibres by working out, then repairing them with protein.
	</string>
	<string name="advice_12">
	    If you are struggling to keep your weights steady, then you are prone to injury.
	</string>
	<string name="advice_13">
	    Ensure you are using proper form when lifting heavy weight. Proper form will help you workout more efficiently and to avoid injuries.
	</string>
	<string name="advice_14">
	    Do not work out everyday, your body needs at least 1 or 2 days to relax and recover.
	</string>
	<string name="advice_15">
	    Staying hydrated increases your Energy and Focus. You will complete your exercises more easily and benefit more.
	</string>
	<string name="advice_16">
	    Staying hydrated increases your Physical Strength by approximately 10-20%.
	</string>
	<string name="advice_17">
	    Your body cannot lose water without losing sodium and vice versa, you cannot retain water without retaining salt. Drinking sports drinks over pure water is more effective at rehydrating after a workout/fitness session.
	</string>
	<string name="advice_18">
	    Your muscles needs time to recover after a day of working out. Alternate between other parts of the body on different days.
	</string>
</resources>